--- a/d/dachau-trials/index.html
+++ b/d/dachau-trials/index.html
@@ -57,7 +57,7 @@
 				<q>Evidence</q> gathered and verdicts rendered during these trials were then considered judicial <q>truths</q> that could not be challenged by the defense in later tribunals, such as the IMT and the subsequent <a href="/nuremberg-military-tribunals/index.html">Nuremberg Military Tribunals</a>.
 			</p>
 			<p>
-				(For more details on this, see the entry on the <a href="/i/international-military-tribunal/index.html">IMT</a>, on <a href="/t/torture/index.html">torture</a>, on <a href="/show-trials/index.html">show trials</a>, as well as <a href="/bibliography/index.html#Rudolf2019">Rudolf 2019</a>, pp. 88-92; <a href="/bibliography/index.html#Rudolf2023">2023</a>, pp. 406-411.)
+				(For more details on this, see the entry on the <a href="/i/international-military-tribunal/index.html">IMT</a>, on <a href="/t/torture/index.html">torture</a>, on <a href="/s/show-trials/index.html">show trials</a>, as well as <a href="/bibliography/index.html#Rudolf2019">Rudolf 2019</a>, pp. 88-92; <a href="/bibliography/index.html#Rudolf2023">2023</a>, pp. 406-411.)
 			</p>
 			<!-- #bbinclude "footer.incl" -->
 </article><div class="col-md-3"><nav class="navigation" id="nav-hhp"></nav><hr><aside id="aside"></aside><script src="/_assets/js/aside-min.js"></script></div></div></main><footer class="footer" id="footer"><p class="text-center">Copyright &copy; 2022-2024 Academic Research Group</p></footer>
