--- a/e/einsatzgruppen/index.html
+++ b/e/einsatzgruppen/index.html
@@ -1511,7 +1511,7 @@
 						<td> 170 </td>
 					</tr>
 					<tr>
-						<td>Kaunas, <a href="/einsatzgruppen/fort-ix/index.html">Fort IX</a></td>
+						<td>Kaunas, <a href="/f/fort-ix/index.html">Fort IX</a></td>
 						<td> 16,013 </td>
 						<td> 70,000 </td>
 						<td> 4 </td>
@@ -1553,7 +1553,7 @@
 						<td> 144 </td>
 					</tr>
 					<tr>
-						<td><a href="/einsatzgruppen/ponary/index.html">Ponary</a>/Vilnius</td>
+						<td><a href="/p/einsatzgruppen/ponary/index.html">Ponary</a>/Vilnius</td>
 						<td> 2,231 </td>
 						<td> 38,000 to 80,000 </td>
 						<td> 17-36 </td>
