--- a/f/frankfurt-auschwitz-show-trial/index.html
+++ b/f/frankfurt-auschwitz-show-trial/index.html
@@ -94,7 +94,7 @@
 				But that was so only because no one ever tried.
 			</p>
 			<p>
-				Defense lawyer Laternser, who had defended clients both during the IMT and the Frankfurt Auschwitz trial, characterized the atmosphere during the latter as having been much worse than that which prevailed during the Nuremberg trials. In fact, a comparison of this trial&rsquo;s features with that of the medieval witch trials reveals shocking parallels. (See the entry on <a href="/witch-trials/index.html">witch trials</a>.)
+				Defense lawyer Laternser, who had defended clients both during the IMT and the Frankfurt Auschwitz trial, characterized the atmosphere during the latter as having been much worse than that which prevailed during the Nuremberg trials. In fact, a comparison of this trial&rsquo;s features with that of the medieval witch trials reveals shocking parallels. (See the entry on <a href="/w/witch-trials/index.html">witch trials</a>.)
 			</p>
 			<h4>
 				<a id="Repercussions"></a>Repercussions
@@ -103,7 +103,7 @@
 				The Great Frankfurt Auschwitz Trial was a watershed event in German history, similar to the 1961 <a href="/e/eichmann-adolf/index.html">Eichmann</a> Show Trial in Israel. During this trial, the German mass media for the first time managed to direct massive public attention to alleged National-Socialist mass-murder crimes within what is today called <q>the Holocaust.</q> With this trial, the German authorities full-heartedly joined the efforts of Jewish (and non-Jewish) pressure groups, as well as the governments of East and West alike, to face the ugly German past, learn from it, atone for it, and hold the National-Socialist criminals accountable.
 			</p>
 			<p>
-				Such a <a href="/show-trials/index.html">show trial</a> on this topic is very much in line with the tradition of all of Germany&rsquo;s occupying powers, including Israel. Hence, nothing was learned from history &mdash; other than that show trials are useful for distorting the historical record.
+				Such a <a href="/s/show-trials/index.html">show trial</a> on this topic is very much in line with the tradition of all of Germany&rsquo;s occupying powers, including Israel. Hence, nothing was learned from history &mdash; other than that show trials are useful for distorting the historical record.
 			</p>
 			<p>
 				The superficial conclusions of this trial regarding mass-murder allegations with Zyklon-B gas chambers at Auschwitz are based almost exclusively on false <a href="/w/witnesses/index.html">witness</a> testimony. Yet still, these conclusions are the foundation upon which the German judiciary subsequently based its dogma that everything about Auschwitz is self-evident, common knowledge, and in no need to be proved again. Attempts at challenging the fraudulent Auschwitz narrative cast into legal stone at Frankfurt were later made illegal. In this regard, the writing of history itself is dictated <i>by penal law</i> in Germany and many other nations.
@@ -112,7 +112,7 @@
 				This act of totalitarian thought-control is far beyond even what the National-Socialist German government ever dreamed of imposing on its people in this regard.
 			</p>
 			<p>
-				(For more information, see the entry on <a href="/show-trials/index.html">show trials</a>, as well as <a href="/bibliography/index.html#Rudolf2019">Rudolf 2019</a>, pp. 99-120; <a href="/bibliography/index.html#Rudolf2023">2023</a>, pp. 414-434.)
+				(For more information, see the entry on <a href="/s/show-trials/index.html">show trials</a>, as well as <a href="/bibliography/index.html#Rudolf2019">Rudolf 2019</a>, pp. 99-120; <a href="/bibliography/index.html#Rudolf2023">2023</a>, pp. 414-434.)
 			</p>
 			<!-- #bbinclude "footer.incl" -->
 </article><div class="col-md-3"><nav class="navigation" id="nav-hhp"></nav><hr><aside id="aside"></aside><script src="/_assets/js/aside-min.js"></script></div></div></main><footer class="footer" id="footer"><p class="text-center">Copyright &copy; 2022-2024 Academic Research Group</p></footer>
