--- a/g/gol-szloma/index.html
+++ b/g/gol-szloma/index.html
@@ -24,7 +24,7 @@
 				Szloma Gol was a Jew from Vilnius. On 10 August 1946, he signed an affidavit. He claimed in it that he was part of a team of 80 prisoners who were shackled by the legs. They were then forced to exhume and burn corpses from mass graves near a Vilnius suburb called <a href="/p/ponary/index.html">Ponary</a> from December 1943 for six months (hence until May 1944). He escaped from there by digging a tunnel out of the pit they were housed in.
 			</p>
 			<p>
-				This escape story resembles that of <a href="/farber-yuri/index.html">Yuri Farber</a>, deposited two years earlier. While Farber described a sophisticated construction operation with pole supports and roof boards propping up the tunnel that was lit by electric lights, all made possible with tools and supplies miraculously found in the mass graves, Gol was more down to earth. His team simply dug the tunnel with their bare hands, broke their chains &mdash; evidently also with their bare hands &mdash; and ran away.
+				This escape story resembles that of <a href="/f/farber-yuri/index.html">Yuri Farber</a>, deposited two years earlier. While Farber described a sophisticated construction operation with pole supports and roof boards propping up the tunnel that was lit by electric lights, all made possible with tools and supplies miraculously found in the mass graves, Gol was more down to earth. His team simply dug the tunnel with their bare hands, broke their chains &mdash; evidently also with their bare hands &mdash; and ran away.
 			</p>
 			<p>
 				Their pyres were built over trenches 7 meters long, were pyramidal in shape, and had a wooden chimney sticking out at the top used to pour fuel down. The pyramidal shape and the weird wooden chimney also show up in Farber&rsquo;s testimony. Hence, it looks like Gol plagiarized Farber&rsquo;s account. However, Faber had his team of 80 people work only from late January 1944 until mid-April.
@@ -42,7 +42,7 @@
 				This testimony relates to one of many events claimed to have been part of the alleged German clean-up operation which the orthodoxy calls <a href="/a/aktion-1005/index.html"><i>Aktion</i> 1005</a>. The above exposition demonstrates that Gol&rsquo;s scenario is detached from reality. Its claimed dimension cannot be based on experiences, but on mere propaganda, imagination and delusion.
 			</p>
 			<p>
-				(See also the similar accounts by <a href="/farber-yuri/index.html">Yuri Farber</a>, <a href="/b/blyazer-a/index.html">A. Blyazer</a> and <a href="/z/zaydel-matvey/index.html">Matvey Zaydel</a>; for more details, see <a href="/bibliography/index.html#Mattogno2022c">Mattogno 2022c</a>, pp. 680-682.)
+				(See also the similar accounts by <a href="/f/farber-yuri/index.html">Yuri Farber</a>, <a href="/b/blyazer-a/index.html">A. Blyazer</a> and <a href="/z/zaydel-matvey/index.html">Matvey Zaydel</a>; for more details, see <a href="/bibliography/index.html#Mattogno2022c">Mattogno 2022c</a>, pp. 680-682.)
 			</p>
 			<!-- #bbinclude "footer.incl" -->
 </article><div class="col-md-3"><nav class="navigation" id="nav-hhp"></nav><hr><aside id="aside"></aside><script src="/_assets/js/aside-min.js"></script></div></div></main><footer class="footer" id="footer"><p class="text-center">Copyright &copy; 2022-2024 Academic Research Group</p></footer>
