--- a/s/sheftel-yoram/index.html
+++ b/s/sheftel-yoram/index.html
@@ -27,7 +27,7 @@
 				</figcaption>
 			</figure>
 			<p>
-				After <a href="/d/demjanjuk-john/index.html">John Demjanjuk</a>&rsquo;s first defense lawyer, <a href="/eitan-dov/index.html">Dov Eitan</a>, had been assassinated the day before Demjanjuk&rsquo;s appeal trial before the Jerusalem Court of Appeals was to start, Demjanjuk&rsquo;s second lawyer Yoram Sheftel was attacked during Eitan&rsquo;s funeral: someone threw acid into his face which almost made him blind (<a href="/bibliography/index.html#Sheftel">Sheftel 1994</a>, pp. 243-263).
+				After <a href="/d/demjanjuk-john/index.html">John Demjanjuk</a>&rsquo;s first defense lawyer, <a href="/e/eitan-dov/index.html">Dov Eitan</a>, had been assassinated the day before Demjanjuk&rsquo;s appeal trial before the Jerusalem Court of Appeals was to start, Demjanjuk&rsquo;s second lawyer Yoram Sheftel was attacked during Eitan&rsquo;s funeral: someone threw acid into his face which almost made him blind (<a href="/bibliography/index.html#Sheftel">Sheftel 1994</a>, pp. 243-263).
 			</p>
 			<!-- #bbinclude "footer.incl" -->
 </article><div class="col-md-3"><nav class="navigation" id="nav-hhp"></nav><hr><aside id="aside"></aside><script src="/_assets/js/aside-min.js"></script></div></div></main><footer class="footer" id="footer"><p class="text-center">Copyright &copy; 2022-2024 Academic Research Group</p></footer>
