--- a/h/hitler-adolf/index.html
+++ b/h/hitler-adolf/index.html
@@ -67,7 +67,7 @@
 				Here we have the annihilation of the Jews by way of ending Jewry&rsquo;s influential role in economy, politics, and culture.
 			</p>
 			<p>
-				On 25 October 1941, two days after <a href="/himmler-heinrich/index.html">Himmler</a> had stopped all Jewish emigration, allegedly because Hitler gave the (oral) order for the Holocaust, we have the following statement from Hitler. It was uttered during a private dinner with his closest co-conspirators and top executors of the Holocaust, SS chief Heinrich Himmler and the head of Germany&rsquo;s Department of Homeland Security (<a href="/r/reichssicherheitshauptamt/index.html"><i>Reichssicherheitshauptamt</i></a>), <a href="/h/heydrich-reinhardt/index.html">Reinhardt Heydrich</a>:
+				On 25 October 1941, two days after <a href="/h/himmler-heinrich/index.html">Himmler</a> had stopped all Jewish emigration, allegedly because Hitler gave the (oral) order for the Holocaust, we have the following statement from Hitler. It was uttered during a private dinner with his closest co-conspirators and top executors of the Holocaust, SS chief Heinrich Himmler and the head of Germany&rsquo;s Department of Homeland Security (<a href="/r/reichssicherheitshauptamt/index.html"><i>Reichssicherheitshauptamt</i></a>), <a href="/h/heydrich-reinhardt/index.html">Reinhardt Heydrich</a>:
 			</p>
 			<blockquote>
 				<p>
@@ -162,7 +162,7 @@
 				</p>
 			</blockquote>
 			<p>
-				In his book <i>Hitler&rsquo;s War,</i> British historian David Irving concluded that Hitler didn&rsquo;t know what <a href="/himmler-heinrich/index.html">Himmler</a> and <a href="/h/heydrich-reinhardt/index.html">Heydrich</a> were doing behind his back &mdash; which seems quite unbelievable. It appears more appropriate to conclude that Hitler had to fight a war against the entire world. The skirmish against the Jews, small in comparison, simply wasn&rsquo;t important enough for him to care too much.
+				In his book <i>Hitler&rsquo;s War,</i> British historian David Irving concluded that Hitler didn&rsquo;t know what <a href="/h/himmler-heinrich/index.html">Himmler</a> and <a href="/h/heydrich-reinhardt/index.html">Heydrich</a> were doing behind his back &mdash; which seems quite unbelievable. It appears more appropriate to conclude that Hitler had to fight a war against the entire world. The skirmish against the Jews, small in comparison, simply wasn&rsquo;t important enough for him to care too much.
 			</p>
 			<p>
 				(See also the next entry on the <a href="/h/hitler-order-final-solution/index.html">Hitler Order</a> as well as the entry on <a href="/e/extirpation/index.html">Extirpation</a>; for more details, see <a href="/bibliography/index.html#Werner">Werner 2019</a>, pp. 25-31; <a href="/bibliography/index.html#Dalton2023">Dalton 2023</a>; <a href="/bibliography/index.html#Graf_Kues">Graf/Kues/Mattogno 2020</a>, pp. 209-226.)
