--- a/terms-conditions-of-use/index.html
+++ b/terms-conditions-of-use/index.html
@@ -46,7 +46,7 @@
 				<a name="1"></a>1) Scope
 			</h4>
 			<p>
-				<b>1.1</b> These Terms and Conditions (hereinafter <q>T&amp;C</q>) of ARG, apply to all contracts for the delivery of goods by a consumer or entrepreneur (hereinafter <q>Customer</q>) with the Seller regarding the goods displayed by the Seller on his online shop at <a href="/h/holocaust-encyclopedia/index.html">holocaustencyclopedia.com/shop/</a>. The inclusion of the Customer&rsquo;s own conditions is hereby denied, unless otherwise agreed.
+				<b>1.1</b> These Terms and Conditions (hereinafter <q>T&amp;C</q>) of ARG, apply to all contracts for the delivery of goods by a consumer or entrepreneur (hereinafter <q>Customer</q>) with the Seller regarding the goods displayed by the Seller on his online shop at <a href="https://holocaustencyclopedia.com/product/holocaust-encyclopedia/">holocaustencyclopedia.com/shop/</a>. The inclusion of the Customer&rsquo;s own conditions is hereby denied, unless otherwise agreed.
 			</p>
 			<p>
 				<b>1.2</b> These T&amp;C apply accordingly to contracts for the delivery of vouchers, unless expressly stipulated otherwise.
@@ -64,7 +64,7 @@
 				<b>2.2</b> The Customer can submit the offer using the online order form integrated in the Seller&rsquo;s internet shop. After placing the selected goods in the virtual shopping cart and going through the electronic ordering process, the Customer submits a legally binding contract offer with regard to the goods in the shopping cart by clicking the button that concludes the ordering process, and by clicking the pertinent check box, he agrees to these T&amp;C. Furthermore, the Customer can also submit the offer to the Seller by phone, fax, email or regular mail.
 			</p>
 			<p>
-				<b>2.3</b> The Seller can accept the Customer&rsquo;s offer placed through Seller&rsquo;s website at <a href="/h/holocaust-encyclopedia/index.html">holocaustencyclopedia.com/shop/</a> within five days,
+				<b>2.3</b> The Seller can accept the Customer&rsquo;s offer placed through Seller&rsquo;s website at <a href="https://holocaustencyclopedia.com/product/holocaust-encyclopedia/">holocaustencyclopedia.com/shop/</a> within five days,
 			</p>
 			<ul>
 				<li>by sending the Customer a written order confirmation or an order confirmation in text form (fax or e-mail), whereby the receipt of the order confirmation by the Customer is decisive, or</li>
