--- a/w/witnesses-against-mass-murder/index.html
+++ b/w/witnesses-against-mass-murder/index.html
@@ -35,7 +35,7 @@
 			<ul>
 				<li><a href="/b/behr-emil/index.html">Emil Behr</a> (<a href="/a/auschwitz/index.html">Auschwitz</a>)</li>
 				<li><a href="/d/dibowski-wilhelm/index.html">Wilhelm Dibowski</a> (<a href="/a/auschwitz/index.html">Auschwitz</a>)</li>
-				<li><a href="/fries-jakob/index.html">Jakob Fries</a> (<a href="/a/auschwitz/index.html">Auschwitz</a>)</li>
+				<li><a href="/f/fries-jakob/index.html">Jakob Fries</a> (<a href="/a/auschwitz/index.html">Auschwitz</a>)</li>
 				<li>Georg Klein (<a href="/a/auschwitz/index.html">Auschwitz</a>; see entry on <a href="/v/vrba-rudolf/index.html">R. Vrba</a>)</li>
 				<li><a href="/k/kozak-stanislaw/index.html">Stanis&#322;aw Kozak</a> (<a href="/b/belzec/index.html">Belzec</a>)</li>
 				<li><a href="/l/levi-primo/index.html">Primo Levi</a> (<a href="/a/auschwitz/index.html">Auschwitz</a>)</li>
