fix /r/ and /t/ links

--- a/b/budnik-david/index.html
+++ b/b/budnik-david/index.html
@@ -27,7 +27,7 @@
 				Among other things, Budnik stated that he and other slave-labor inmates were put in chains and had to exhume <a href="/m/mass-graves/index.html">mass graves</a>, and burn the extracted bodies on pyres. During his interrogations, he did not give any specifics about the pyres, other than that up to 2,000 bodies were placed on each of them. He asserted, however, that a total of 120,000 to 125,000 bodies were burned this way.
 			</p>
 			<p>
-				In a 1993 book containing an essay by Budnik, he describes the pyres used. They were built on an area of 10 m &times; 10 m, and were at least three meters high. However, this description was at least partially plagiarized from another witness, <a href="/trubakov-ziama/index.html">Ziama Trubakov</a>, who testified in 1967:
+				In a 1993 book containing an essay by Budnik, he describes the pyres used. They were built on an area of 10 m &times; 10 m, and were at least three meters high. However, this description was at least partially plagiarized from another witness, <a href="/t/trubakov-ziama/index.html">Ziama Trubakov</a>, who testified in 1967:
 			</p>
 			<blockquote>
 				<p>
