--- a/r/renard-jean-paul/index.html
+++ b/r/renard-jean-paul/index.html
@@ -32,7 +32,7 @@
 				</p>
 			</blockquote>
 			<p>
-				When confronted about the false gas-chamber claim by French historian <a href="/rassinier-paul/index.html">Paul Rassinier</a> in 1947, Renard responded:
+				When confronted about the false gas-chamber claim by French historian <a href="/r/rassinier-paul/index.html">Paul Rassinier</a> in 1947, Renard responded:
 			</p>
 			<blockquote>
 				<p>
